...
    <string name="supabase_outbox_status_dialog_local_reports_label">Диагностические отчёты</string>
    <string name="dictionary_sync_running">Обновляем словари OBD-II…</string>
    <string name="dictionary_sync_failed">Не удалось обновить словари OBD-II: %1$s</string>
    <string name="dictionary_sync_error_generic">Неопознанная ошибка обновления словарей</string>
    <string name="dictionary_sync_touch_hint">Нажмите, чтобы повторить обновление словарей.</string>
    <string name="dictionary_sync_retry_accessibility_action">Повторное обновление словарей</string>
    <string name="diagnostics_metric_status_ok">Норма</string>
    <string name="diagnostics_metric_status_warning_low">Ниже нормы</string>
    <string name="diagnostics_metric_status_warning_high">Выше нормы</string>
    <string name="diagnostics_metric_status_critical_low">Критически низкое значение</string>
    <string name="diagnostics_metric_status_critical_high">Критически высокое значение</string>
    <string name="diagnostics_metric_status_no_data">Нет данных</string>
    <string name="diagnostics_metric_value_placeholder">-</string>
...
